welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
setPos(2*x-1)
      ^